--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["Simon Wollwage"]
 [dependencies.xlib]
 git = "https://github.com/servo/rust-xlib.git"
 
+[dependencies.xinerama]
+git = "https://github.com/Kintaro/rust-xinerama.git"
+
 [[bin]]
 
 name = "wtftw"
