--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.0.2"
 authors = ["Simon Wollwage"]
 
 [dependencies.xlib]
-git = "https://github.com/servo/rust-xlib.git"
+git = "https://github.com/Kintaro/rust-xlib.git"
 
 [dependencies.xinerama]
 git = "https://github.com/Kintaro/rust-xinerama.git"
