fixed cargo branch

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ authors = ["Simon Wollwage"]
 
 [dependencies.xlib]
 git = "https://github.com/Kintaro/rust-xlib.git"
+branch = "class_hint"
 
 [dependencies.xinerama]
 git = "https://github.com/Kintaro/rust-xinerama.git"
