--- a/xlib/Cargo.toml
+++ b/xlib/Cargo.toml
@@ -5,13 +5,11 @@ version = "0.2.0"
 authors = ["Simon Wollwage"]
 
 [dependencies.xlib]
-#git = "https://github.com/Kintaro/rust-xlib.git"
-path = "/home/wollwage/code/rust/rust-xlib"
-#branch = "sizehint"
+git = "https://github.com/Kintaro/rust-xlib.git"
+branch = "sizehint"
 
 [dependencies.xinerama]
-#git = "https://github.com/Kintaro/rust-xinerama.git"
-path = "/home/wollwage/code/rust/rust-xinerama"
+git = "https://github.com/Kintaro/rust-xinerama.git"
 
 [dependencies.wtftw_core]
 path = "../core"
