--- a/xlib/Cargo.toml
+++ b/xlib/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Simon Wollwage"]
 
 [dependencies.xlib]
 git = "https://github.com/Kintaro/rust-xlib.git"
-branch = "sizehint"
+branch = "wtftw"
 
 [dependencies.xinerama]
 git = "https://github.com/Kintaro/rust-xinerama.git"
