--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,6 +4,9 @@ name = "wtftw_core"
 version = "0.2.0"
 authors = ["Simon Wollwage"]
 
+[dependencies]
+bitflags = "0.1"
+
 [lib]
 name = "wtftw_core"
 path = "src/wtftw.rs"
