--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["Simon Wollwage"]
 
 [dependencies]
 bitflags = "0.5"
-rustc-serialize = "*"
+serde_json = "1.0.16"
 getopts = "*"
 log = "*"
 num = "*"
