--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Simon Wollwage"]
 
 [dependencies]
 bitflags = "0.5.0"
-rustc-serialize = "*"
+serde_json = "1.0.16"
 log = "*"
 num = "*"
 libc = "*"
