--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: rust
 rust: nightly
+
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libxinerama1 libxinerama-dev
+
 script: make test
