--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -4,12 +4,12 @@ version = "0.3.2"
 authors = ["Simon Wollwage"]
 
 [dependencies]
-bitflags = "0.5.0"
-serde_json = "1.0.16"
-log = "*"
-libc = "*"
-dylib = "*"
-dirs = "1"
+bitflags = "1.2.1"
+serde_json = "1.0.56"
+log = "0.4.8"
+libc = "0.2.71"
+dylib = "0.0.3"
+dirs = "3.0.1"
 
 [lib]
 name = "wtftw_core"
