--- a/xlib/Cargo.toml
+++ b/xlib/Cargo.toml
@@ -5,9 +5,9 @@ version = "0.4.0"
 authors = ["Simon Wollwage"]
 
 [dependencies]
-log = "*"
-libc = "*"
-x11 = { version = "*", features = ["xlib", "xinerama"] }
+log = "0.4.8"
+libc = "0.2.71"
+x11 = { version = "2.18.2", features = ["xlib", "xinerama"] }
 
 [dependencies.wtftw_core]
 path = "../core"
