--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -2,8 +2,10 @@
 name = "wtftw_core"
 version = "0.3.2"
 authors = ["Simon Wollwage"]
+edition = "2018"
 
 [dependencies]
+anyhow = "1.0.31"
 bitflags = "1.2.1"
 serde_json = "1.0.56"
 log = "0.4.8"
@@ -11,7 +13,3 @@ libc = "0.2.71"
 dylib = "0.0.3"
 dirs = "3.0.1"
 
-[lib]
-name = "wtftw_core"
-path = "src/wtftw.rs"
-crate-type = ["rlib"]
